Ingredient class, props declared in constructor

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,3 +5,7 @@
     <p>The list goes here...</p>
   </div>
 </div>
+
+<ul class="list-group">
+  <a class='list-group-item' style='cursor: pointer'></a>
+</ul>
