--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -7,5 +7,10 @@
 </div>
 
 <ul class="list-group">
-  <a class='list-group-item' style='cursor: pointer'></a>
+  <a class='list-group-item'
+    style='cursor: pointer'
+    *ngFor='let ingredient of ingredients'>
+    {{ ingredient.name }}
+    ({{ ingredient.amount }})
+  </a>
 </ul>
