--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,22 +6,13 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-      <a href='#' 
-      class='list-group-item clearfix' 
-      *ngFor='let recipe of recipes'>
-        <div class="pull-left">
-          <h4 class='list-group-item-heading'>{{ recipe.name }}</h4>
-          <p class='list-group-item-text'>{{ recipe.description}}</p>
-        </div>
-        <span>
-          <img  
-          [src]='recipe.imagePath'
-          alt='{{recipe.name}}' 
-          class='img-responsive pull-right' 
-          style='max-height: 50px;'>
-        </span>
-      </a>
-        <app-recipe-item></app-recipe-item>
+<!-- Recipe model is used by recipe-list.component.ts and stores new Recipes in array -->
+<!-- recipe-item.component has @input() so able to access that array of recipes -->
+<!-- Here we *ngFor for each item in the array -->
+        <app-recipe-item
+        *ngFor='let recipeElement of recipes'
+        [recipe]='recipeElement'
+        (recipeSelected)='onRecipeSelected(recipeElement)'></app-recipe-item>
     </div>
   </div>
 
