--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -11,8 +11,7 @@
 <!-- Here we *ngFor for each item in the array -->
         <app-recipe-item
         *ngFor='let recipeElement of recipes'
-        [recipe]='recipeElement'
-        (recipeSelected)='onRecipeSelected(recipeElement)'></app-recipe-item>
+        [recipe]='recipeElement'></app-recipe-item>
     </div>
   </div>
 
